Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20639

Debugger displays multidimensional arrays incorrectly

XMLWordPrintable

    • Windows
    • 5a8b198b9a76d63854bebaa364aae9780890b2fb (qt-creator/qt-creator/4.8)

      When I have a multidimensional array like

      int foo[N][3]

      and expand it in the debugger, it shows up as as 3 arrays of N items each rather than N arrays with 3 items each as expected.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            vilya Vilya Harvey
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes