Debugger: Fix array type element count extraction

Task-number: QTCREATORBUG-20639
Task-number: QTCREATORBUG-21677
Change-Id: I518ba2a8afde099535becd3af9bed4ded1b54644
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>